# atom-ide-rust

./: .eslintrc.js  .prettierignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
lib/: competition.js  dist-fetch.js  index.js  rls-project.js  rust-project.js
snippets/: .eslintrc.json  rust.cson
spec/: main-spec.js  runner.js
spec/fixtures/: Cargo.toml
