[package]
name = "fixtures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "atom-ide-rust-test"
path = "./spec/fixtures/src/main.rs"

[lib]
name = "atom_ide_rust_lib_test"
path = "./spec/fixtures/lib/lib.rs"
